@@ -418,14 +418,19 @@ void cong_node_self_test(CongNodePtr node)
 
 void cong_node_self_test_recursive(CongNodePtr node)
 {
-	CongNodePtr iter;
 
 	g_return_if_fail(node);
 
 	cong_node_self_test(node);
 
-	for (iter=node->children; iter; iter=iter->next) {
-		cong_node_self_test_recursive(iter);
+	if (node->type==XML_ENTITY_REF_NODE) {
+		cong_node_self_test_recursive(node->children);
+	} else {
+		CongNodePtr iter;
+
+		for (iter=node->children; iter; iter=iter->next) {
+			cong_node_self_test_recursive(iter);
+		}
 	}
 }
 
